@@ -22,7 +22,7 @@
 		</a>
 	</li>
 	<li>
-		<a href="https://github.com/TrustPayments/woocommerce-subscription/releases/tag/1.0.10/">
+		<a href="https://github.com/TrustPayments/woocommerce-subscription/releases/tag/1.0.11/">
 			Source
 		</a>
 	</li>
@@ -38,7 +38,7 @@
 	</div>
 	<div class="chapter-body">
 					<div class="paragraph">
-<p>If you don&#8217;t already have one, create a <a href="https://www.trustpayments.com//">Trust Payments</a> account.</p>
+<p>If you don&#8217;t already have one, create a <a href="https://ep.trustpayments.com/user/signup/">Trust Payments</a> account.</p>
 </div>					</div>
 </div>	<div class="chapter" id="_installation">
 	<div class="chapter-title">
